--- a/test/fixtures/0003-modifying-text-node.html
+++ b/test/fixtures/0003-modifying-text-node.html
@@ -5,7 +5,7 @@
 			setTimeout(() => {
 				const target = document.getElementById("test-target");
 				const textNode = target.childNodes[0];
-				textNode.nodeValue = "This message was dynamically added";
+				textNode.nodeValue = "This element was dynamically updated";
 			}, 500);
 		</script>
 	</head>
